[gd_scene load_steps=7 format=2]

[ext_resource path="res://animatronics/base/base.tscn" type="PackedScene" id=1]
[ext_resource path="res://animatronics/gabe/gabe.gd" type="Script" id=2]
[ext_resource path="res://animatronics/gabe/m1garand.wav" type="AudioStream" id=3]
[ext_resource path="res://animatronics/gabe/reload.wav" type="AudioStream" id=4]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="CapsuleMesh" id=2]
material = SubResource( 1 )
radius = 0.206
mid_height = 1.529

[node name="BaseAnimatronic" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="GlassBreakingPlayer" type="AudioStreamPlayer" parent="." index="1"]

[node name="GunFumblePlayer" type="AudioStreamPlayer" parent="." index="2"]
stream = ExtResource( 4 )

[node name="AimingTimer" type="Timer" parent="." index="3"]

[node name="MeshInstance" type="MeshInstance" parent="." index="4"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="GunShotPlayer" type="AudioStreamPlayer" parent="." index="5"]
stream = ExtResource( 3 )
